objects/MonthlySalaryDeclaration__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Monthly Salary Declaration</relationshipLabel>
        <relationshipName>MonthlySalaryDeclaration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Involvement__c</fullName>
        <label>Involvement</label>
        <referenceTo>BP_Involvement__c</referenceTo>
        <relationshipLabel>Monthly Salary Declaration</relationshipLabel>
        <relationshipName>MonthlySalaryDeclaration</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. January</fullName>
                </value>
                <value>
                    <fullName>2. February</fullName>
                </value>
                <value>
                    <fullName>3. March</fullName>
                </value>
                <value>
                    <fullName>4. April</fullName>
                </value>
                <value>
                    <fullName>5. May</fullName>
                </value>
                <value>
                    <fullName>6. June</fullName>
                </value>
                <value>
                    <fullName>7. July</fullName>
                </value>
                <value>
                    <fullName>8. August</fullName>
                </value>
                <value>
                    <fullName>9. September</fullName>
                </value>
                <value>
                    <fullName>10. October</fullName>
                </value>
                <value>
                    <fullName>11. November</fullName>
                </value>
                <value>
                    <fullName>12. December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Monthly Salary Declaration</label><nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Monthly Salary Declaration</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Monthly Salary Declaration</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>